accounting and claidating start date for since query

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,4 @@ REDIS_PORT=6379
 DEFAULT_OWNER=chromium
 DEFAULT_REPO=chromium
 DEFAULT_START_DATE=2024-01-02T15:04:05Z
-REFETCH_INTERVAL=10s
+REFETCH_INTERVAL=1h
