--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ DB_USER=postgres
 DB_PASSWORD=password
 DB_HOST=localhost
 DB_PORT=5432
+DATABASE_URL=postgres://postgres:password@localhost:5432/postgres?sslmode=disable
 
 REDIS_HOST=redis
 REDIS_PORT=6379
