--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 name: savannah
 
 services:
-  # redis:
-  #   image: redis:latest
-  #   container_name: redis
-  #   ports:
-  #     - 6379:6379
-  #   volumes:
-  #     - ./redis-data:/data
-  #   expose:
-  #     - 6379
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - 6379:6379
+    volumes:
+      - ./redis-data:/data
+    expose:
+      - 6379
 
   postgres:
     image: postgres:latest
