--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ DATABASE_URL=postgres://postgres:password@localhost:5432/postgres?sslmode=disabl
 REDIS_HOST=redis
 REDIS_PORT=6379
 
+REDIS_ADDRESS=localhost:6379
+REDIS_PASSWORD=
+
 DEFAULT_OWNER=chromium
 DEFAULT_REPO=chromium
 DEFAULT_START_DATE=2024-01-02T15:04:05Z
