--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,6 @@
-DATABASE=postgres
-DB_USER=postgres
-DB_PASSWORD=password
-DB_HOST=localhost
-DB_PORT=5432
+SERVER_ADDRESS=:8080
+
 DATABASE_URL=postgres://postgres:password@localhost:5432/postgres?sslmode=disable
-
-REDIS_HOST=redis
-REDIS_PORT=6379
-
-REDIS_ADDRESS=localhost:6379
-REDIS_PASSWORD=
 
 DEFAULT_OWNER=chromium
 DEFAULT_REPO=chromium
