--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 SERVER_PORT=:8080
 
-DATABASE_URL=postgres://postgres:password@postgres:5432/postgres?sslmode=disable
+DATABASE_URL=postgres://postgres:password@db:5432/postgres?sslmode=disable
 
 DEFAULT_OWNER=chromium
 DEFAULT_REPO=chromium
