--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     container_name: savannah
     ports:
       - 8080:8080
+    volumes:
+      - .:/app
     depends_on:
       - db
     env_file:
