--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ SERVER_PORT=:8080
 
 DATABASE_URL=postgres://postgres:password@db:5432/postgres?sslmode=disable
 
-DEFAULT_OWNER=chromium
-DEFAULT_REPO=chromium
+DEFAULT_OWNER=rhaqim
+DEFAULT_REPO=ussdframework1
 DEFAULT_START_DATE=2024-01-02T15:04:05Z
 REFETCH_INTERVAL=1h
